# tp_so_2023

./: .cproject  .gitignore  .project  CMakeLists.txt  Enunciado.pdf:Zone.Identifier  README.md
console-module/: .cproject  .project  console.code  console.config
console-module/Debug/: makefile
console-module/Debug/src/: subdir.mk
console-module/src/: CMakeLists.txt  console-module.c  console-module.h
console-module/src/utils/: CMakeLists.txt  config-utils.c  config-utils.h  file-utils.c  file-utils.h  logger-utils.c  logger-utils.h  socket-structs.h  socket-utils.c  socket-utils.h
cpu-module/: .cproject  .project  cpu.config
cpu-module/Debug/: cpu-module  makefile
cpu-module/Debug/src/: subdir.mk
cpu-module/src/: cpu-module.c  cpu-module.h
deployment/: script-inicial.sh
deployment/base/: cpu.config  fileSystem.config  kernel.config  memory.config  script-console1.sh  script-console2.sh  script-cpu.sh  script-fs.sh  script-kernel.sh  script-memory.sh
deployment/deadlock/: console.config  cpu.config  fileSystem.config  kernel.config  memory.config  script-console1.sh  script-console2.sh  script-console3.sh  script-console4.sh  script-cpu.sh  script-fs.sh  script-memory.sh
deployment/error/: cpu.config  fileSystem.config  kernel.config  memory.config  script-console1.sh  script-console2.sh  script-console3.sh  script-console4.sh  script-cpu.sh  script-fs.sh  script-kernel.sh  script-memory.sh
deployment/fs/: cpu.config  kernel.config  memory.config  script-console1.sh  script-console2.sh  script-console3.sh  script-cpu.sh  script-kernel.sh  script-memory.sh
deployment/memory/: console.config  cpu.config  kernel.config  memory.config  script-console1.sh  script-console2.sh  script-console3.sh  script-cpu.sh  script-fs.sh  script-kernel.sh  script-memory.sh
file-system-module/: .cproject  .project  fileSystem.config
file-system-module/Debug/: file-system-module  makefile
file-system-module/src/: file-system-module.c  file-system-module.h
kernel-module/: .cproject  .project  kernel.config
kernel-module/Debug/: makefile
kernel-module/src/: kernel-module.c  kernel-module.h
memory-module/: .cproject  .project  memory.config
memory-module/Debug/: makefile
memory-module/Release/: makefile  sources.mk
memory-module/src/: memory-module.c  memory-module.h
shared-library/: .cproject  .project  CMakeLists.txt  shared-sockets.c  shared-sockets.h
shared-library/log/: shared-logs.c
shared-library/shared/: CMakeLists.txt
shared-library/shared/execution-context/: execution-context.c  execution-context.h
shared-library/shared/logs/: log.c  log.h
shared-library/shared/memory/: memory.c  memory.h
shared-library/shared/serialization/: serialization.c  serialization.h
shared-library/shared/sockets/: client-socket.c  client-socket.h  server-socket.c  server-socket.h
shared-library/shared/structs/: execution-context.h  memory.h  socket.h
shared-library/socket/: shared-client-sockets.c  shared-client-sockets.h  shared-server-sockets.c  shared-server-sockets.h
shared-library/structs/: socket.h
(+83 files in other folders)
